# demo_ci_cd_github

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: 01-hello-world.yml  02-tests-basiques.yml  03-tests-complets.yml  04-matrix-testing.yml  05-deploiement.yml
src/: __init__.py  calculator.py
tests/: test_calculator.py
